--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.2.0",
   "description": "Use tfjs model.predict in a chrome extension (v3)",
   "scripts": {
-    "copy": "mkdir -p dist/src && cp src/content.js src/default_blur.css dist/src/",
+    "copy": "mkdir -p dist/src && cp src/content.js src/default_blur.css src/popup.html src/popup.js dist/src/",
     "build": "parcel build src/service_worker.js --dist-dir dist/src/ && npm run copy",
     "watch": "npm run copy && parcel watch src/service_worker.js --dist-dir dist/src/"
   },
