--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,17 +1,10 @@
 {
-  "name": "AI Image Blur",
+  "name": "SafeWeb AI",
   "description": "Automatically blurs any image whose label OR alt text matches words in your blocklist.",
   "version": "0.2.0",
   "manifest_version": 3,
-  "permissions": [
-    "storage",
-    "tabs",
-    "activeTab",
-    "contextMenus"
-  ],
-  "host_permissions": [
-    "<all_urls>"
-  ],
+  "permissions": ["storage", "tabs", "activeTab", "contextMenus"],
+  "host_permissions": ["<all_urls>"],
   "background": {
     "service_worker": "src/service_worker.js",
     "type": "module"
@@ -22,15 +15,9 @@
   },
   "content_scripts": [
     {
-      "matches": [
-        "<all_urls>"
-      ],
-      "css": [
-        "src/default_blur.css"
-      ],
-      "js": [
-        "src/content.js"
-      ],
+      "matches": ["<all_urls>"],
+      "css": ["src/default_blur.css"],
+      "js": ["src/content.js"],
       "all_frames": true,
       "run_at": "document_idle"
     }
